--- a/PortfolioUsingOnlyHTML/index.html
+++ b/PortfolioUsingOnlyHTML/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <!-- header starts -->
+    <table id="header"border="0"width="100%"cellpading="0" cellspacing="0" bgcolor="#83dfe6">
+      <tr>
+        <td>
+          <table border="0" width="85%" cellpading="15" cellspacing="0" align="center">
+            <tr>
+                <td>
+                    <font face="arial" color="#000000" size="5" >
+                      <span class="fa fa-user-circle" aria-hidden="true"></span>
+                    Nitish R Maldakar
+                </font>
+                </td>
+                <td>
+                    <a href="" <font face="arial" color="#ffffff" size="4">Home</font></a>
+                </td>
+                <td>
+                    <a href="" <font face="arial" color="#ffffff" size="4">10th STD</font></a>
+                </td>
+                <td>
+                    <a href="" <font face="arial" color="#ffffff" size="4">2nd PUC</font></a>
+                </td>
+                <td>
+                    <a href="" <font face="arial" color="#ffffff" size="4">About</font></a>
+                </td>
+                <td>
+                    <a href="" <font face="arial" color="#ffffff" size="4">Contact</font></a>
+                </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+    <!-- header ends -->
+  </body>
 </html>
