--- a/PortfolioUsingOnlyHTML/index.html
+++ b/PortfolioUsingOnlyHTML/index.html
@@ -7,38 +7,142 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <!-- header starts -->
-    <table id="header"border="0"width="100%"cellpading="0" cellspacing="0" bgcolor="#83dfe6">
+     <!--Start Header-->
+     <table id="header" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#83dfe6">
       <tr>
-        <td>
-          <table border="0" width="85%" cellpading="15" cellspacing="0" align="center">
-            <tr>
-                <td>
-                    <font face="arial" color="#000000" size="5" >
-                      <span class="fa fa-user-circle" aria-hidden="true"></span>
-                    Nitish R Maldakar
-                </font>
-                </td>
-                <td>
-                    <a href="" <font face="arial" color="#ffffff" size="4">Home</font></a>
-                </td>
-                <td>
-                    <a href="" <font face="arial" color="#ffffff" size="4">10th STD</font></a>
-                </td>
-                <td>
-                    <a href="" <font face="arial" color="#ffffff" size="4">2nd PUC</font></a>
-                </td>
-                <td>
-                    <a href="" <font face="arial" color="#ffffff" size="4">About</font></a>
-                </td>
-                <td>
-                    <a href="" <font face="arial" color="#ffffff" size="4">Contact</font></a>
-                </td>
-            </tr>
-          </table>
-        </td>
+          <td>
+              <table border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
+                  <tr>
+                      <td>
+                          <font face="arial" color="#000000" size="5">
+                              <span class="fa fa-user-circle" aria-hidden="true"></span>
+                              Nitish R Maladakar
+                          </font>
+                      </td>
+                      <td >
+                          &nbsp;
+                      </td>
+                      <td>
+                          <a href="#home"><font face="arial" color="#000000" size="4">Home</font></a>
+                      </td>
+                      <td>
+                          <a href="#about"><font face="arial" color="#000000" size="4">About</font></a>
+                      </td>
+                      <td>
+                          <a href="#10th"><font face="arial" color="#000000" size="4">10th STD</font></a>
+                      </td>
+                      <td>
+                          <a href="#2ndPUC"><font face="arial" color="#000000" size="4">2nd PUC</font></a>
+                      </td>
+                      <td>
+                          <a href="#contact"><font face="arial" color="#000000" size="4">Contact</font></a>
+                      </td>
+                  </tr>
+              </table>
+          </td>
+
       </tr>
-    </table>
-    <!-- header ends -->
+  </table>
+  <!--End Header-->
+<!-- ------------------------------- -->
+  <!-- start home -->
+  <table id="home" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#292929">
+    <tr>
+        <td>
+            <table border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
+                <tr>
+                    <td  align="center" vertical="middle">
+                      <h3>
+                        <font face="arial" color="#ffffff" size="6">
+                            Hi Myself Nitish R Maladakar,
+                        </font>
+                      </h3>
+                   
+                    <h2>
+                      <font face="arial" color="#83dfe6" size="7">
+                        I am currently pursuing my bachelours degree in Engineering 
+                    </font>
+                    </h2>
+                   </td>
+                  </tr>
+            </table>
+        </td>
+
+    </tr>
+</table>
+  <!-- end home -->
+<!-- ------------------------------- -->
+  <!-- start about -->
+  <table id="about" border="1" width="100%" cellpadding="0" cellspacing="0" bgcolor="#292929">
+    <tr>
+        <td>
+            <table border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
+                <!-- heading start -->
+                <tr>
+                    <td heigth="180" align="center" vertical="middle" colspan="2" >
+                        <font face="arial" color="#ffffff" size="6">
+                            About
+                        </font>
+                        <hr width="75" color="#83dfe6">
+                   </td>
+                  </tr>
+                  <!-- heading end -->
+                  <tr>
+                    <td width="40%">
+                        <img src="photo.jpg" height="400" alt="Nitish R Maladakar">
+                    </td>
+                    <td width="60%">
+                        <font face="arial" color="#ffffff" siz3="4" >
+                        <h2>I am passionate programmer</h2>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate magnam, excepturi, ipsa accusamus, atque eum ipsum officiis explicabo quibusdam at dolores mollitia magni similique consequuntur? Unde commodi iusto exercitationem hic beatae aperiam placeat dolores aut minima. Saepe nostrum nulla quas itaque praesentium. Vitae molestiae, voluptates explicabo ratione praesentium accusamus, harum, porro excepturi consequuntur at quisquam temporibus? Laborum ad quos ab natus doloribus, molestiae vitae, voluptas recusandae consequuntur reprehenderit saepe perspiciatis quia modi delectus eum! Id consequuntur nisi assumenda magni quasi, saepe eum nulla exercitationem impedit, expedita culpa dolore a ipsum, enim tenetur reprehenderit est praesentium voluptate suscipit officiis necessitatibus. Reprehenderit.
+                    </font>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                        &nbsp;
+                    </td>
+                  </tr>
+            </table>
+        </td>
+
+    </tr>
+</table>
+  <!-- end about -->
+  <!-- ------------------------------- -->
+  <!-- start 10th -->
+  <table id="10th" border="1" width="100%" cellpadding="0" cellspacing="0" bgcolor="#292929">
+    <tr>
+        <td>
+            <table border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
+                <!-- heading start -->
+                <tr>
+                    <td heigth="180" align="center" vertical="middle" colspan="2" >
+                        <font face="arial" color="#ffffff" size="6">
+                            10th
+                        </font>
+                        <hr width="75" color="#83dfe6">
+                   </td>
+                  </tr>
+                  <!-- heading end -->
+                  <tr>
+                    <td width="60%">
+                        <font face="arial" color="#ffffff" siz3="4" >
+                        <h2>I am passionate programmer</h2>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate magnam, excepturi, ipsa accusamus, atque eum ipsum officiis explicabo quibusdam at dolores mollitia magni similique consequuntur? Unde commodi iusto exercitationem hic beatae aperiam placeat dolores aut minima. Saepe nostrum nulla quas itaque praesentium. Vitae molestiae, voluptates explicabo ratione praesentium accusamus, harum, porro excepturi consequuntur at quisquam temporibus? Laborum ad quos ab natus doloribus, molestiae vitae, voluptas recusandae consequuntur reprehenderit saepe perspiciatis quia modi delectus eum! Id consequuntur nisi assumenda magni quasi, saepe eum nulla exercitationem impedit, expedita culpa dolore a ipsum, enim tenetur reprehenderit est praesentium voluptate suscipit officiis necessitatibus. Reprehenderit.
+                    </font>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                        &nbsp;
+                    </td>
+                  </tr>
+            </table>
+        </td>
+
+    </tr>
+</table>
+  <!-- end 10th -->
   </body>
 </html>
