--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                           <a href="#home"><font face="arial" color="#000000" size="4">Home</font></a>
                       </td>
                       <td>
-                          <a href="#about"><font face="arial" color="#000000" size="4">About</font></a>
+                          <a href="./about.html"><font face="arial" color="#000000" size="4">About</font></a>
                       </td>
                       <td>
                           <a href="#10th"><font face="arial" color="#000000" size="4">10th STD</font></a>
@@ -83,41 +83,8 @@
   <!-- end home -->
 <!-- ------------------------------- -->
   <!-- start about -->
-  <table id="about" border="1" width="100%" cellpadding="0" cellspacing="0" bgcolor="">
-    <tr>
-        <td>
-            <table  border="0" width="85%" cellpadding="15" cellspacing="0" align="center">
-                <!-- heading start -->
-                <tr>
-                    <td heigth="180" align="center" vertical="middle" colspan="2" >
-                        <font face="arial" color="" size="6">
-                            About
-                        </font>
-                        <hr width="75" color="#3a9da6">
-                   </td>
-                  </tr>
-                  <!-- heading end -->
-                  <tr>
-                    <td width="40%">
-                        <img src="photo.jpg" height="400" alt="Nitish R Maladakar">
-                    </td>
-                    <td width="60%">
-                        <font face="arial" color="" siz3="4" >
-                        <h2>I am passionate programmer</h2>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate magnam, excepturi, ipsa accusamus, atque eum ipsum officiis explicabo quibusdam at dolores mollitia magni similique consequuntur? Unde commodi iusto exercitationem hic beatae aperiam placeat dolores aut minima. Saepe nostrum nulla quas itaque praesentium. Vitae molestiae, voluptates explicabo ratione praesentium accusamus, harum, porro excepturi consequuntur at quisquam temporibus? Laborum ad quos ab natus doloribus, molestiae vitae, voluptas recusandae consequuntur reprehenderit saepe perspiciatis quia modi delectus eum! Id consequuntur nisi assumenda magni quasi, saepe eum nulla exercitationem impedit, expedita culpa dolore a ipsum, enim tenetur reprehenderit est praesentium voluptate suscipit officiis necessitatibus. Reprehenderit.
-                    </font>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                        &nbsp;
-                    </td>
-                  </tr>
-            </table>
-        </td>
 
-    </tr>
-</table>
+
   <!-- end about -->
   <!-- ------------------------------- -->
   <!-- start 10th -->
